--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@
 //
 //taskB.dependsOn taskA
 
-apply plugin: 'maven'
+apply plugin: 'application'
+apply plugin: 'eclipse'
 apply plugin: 'java'
 
 //dependencies {
@@ -32,24 +33,40 @@ apply plugin: 'java'
 sourceCompatibility = 1.8 
 
 repositories {
+    mavenLocal()
     mavenCentral()
-    //maven { url '' } // 自定义库地址
+    //maven { url '' } // 自定义库地址  可以配置多个
+    //定义spring 5的版本仓库 
+    maven { url 'https://artifacts.alfresco.com/nexus/content/repositories/public' } // 自定义库地址
+    maven { url 'https://artifacts.alfresco.com/nexus/content/repositories/public' } // 自定义库地址
     //mavenRepo urls: "http://repository.sonatype.org/content/groups/forge/"
 }
 
 
 dependencies {
-	compile group: 'org.springframework', name: 'spring-core', version: '5.0.0.M5'
+	// https://mvnrepository.com/artifact/org.springframework/spring-core
+    compile group: 'org.springframework', name: 'spring-core', version: '5.0.0.M5'
+    compile group: 'org.springframework', name: 'spring-core', version: '4.3.7.RELEASE'
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     compile 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:21.0'
 	compile 'mysql:mysql-connector-java:5.1.38'
-	compile 'org.springframework:spring-core:5.0.0.M5'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
     // https://mvnrepository.com/artifact/org.springframework/spring-core
     
 }
+
+// 上传maven仓库jar包
+// apply plugin: 'maven'
+// 
+// uploadArchives {
+//     repositories {
+//         mavenDeployer {
+//             repository(url: "file://localhost/tmp/myRepo/")
+//         }
+//     }
+// }
